syntax = "proto3";

package chora.governor.v1;

import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/chora-io/mods/governor/types/v1";

// Msg is the Msg service.
service Msg {

  // CreateGovernor registers a governor.
  rpc CreateGovernor(MsgCreateGovernor) returns (MsgCreateGovernorResponse);

  // RemoveGovernor removes a governor.
  rpc RemoveGovernor(MsgRemoveGovernor) returns (MsgRemoveGovernorResponse);

  // UpdateGovernorMetadata updates a governor.
  rpc UpdateGovernorMetadata(MsgUpdateGovernorMetadata)
      returns (MsgUpdateGovernorMetadataResponse);
}

// MsgCreateGovernor is the Msg/CreateGovernor request type.
message MsgCreateGovernor {
  option (cosmos.msg.v1.signer) = "address";

  // address is the address of the governor.
  string address = 1;

  // metadata is the metadata of the governor.
  string metadata = 2;
}

// MsgCreateGovernorResponse is the Msg/CreateGovernor response type.
message MsgCreateGovernorResponse {

  // address is the address of the governor.
  string address = 1;
}

// MsgRemoveGovernor is the Msg/RemoveGovernor request type.
message MsgRemoveGovernor {
  option (cosmos.msg.v1.signer) = "address";

  // address is the address of the governor.
  string address = 1;
}

// MsgRemoveGovernorResponse is the Msg/RemoveGovernor response type.
message MsgRemoveGovernorResponse {

  // address is the address of the governor.
  string address = 1;
}

// MsgUpdateGovernorMetadata is the Msg/UpdateGovernorMetadata request type.
message MsgUpdateGovernorMetadata {
  option (cosmos.msg.v1.signer) = "address";

  // address is the address of the governor.
  string address = 1;

  // new_metadata is the new metadata of the governor.
  string new_metadata = 2;
}

// MsgUpdateGovernorMetadataResponse is the Msg/UpdateGovernorMetadata response
// type.
message MsgUpdateGovernorMetadataResponse {

  // address is the address of the governor.
  string address = 1;
}
